create structure front-end and database

--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -7,15 +7,8 @@
       xmlns:f="http://xmlns.jcp.org/jsf/core">
 <h:head>
     <title>my pack</title>
-<!--    <h:outputScript library="primefaces" name="js/axios.js" target="head" />-->
 </h:head>
-<body>
-    <f:view>
-        <h:outputLabel id="output" value="Hello, world !"/>
-        <button>click here</button>
-    </f:view>
-    <script type="">
-
-    </script>
-</body>
+<h:body>
+    <ui:include src="/src/admin/index.xhtml" />
+</h:body>
 </html>
