--- a/src/main/webapp/src/admin/index.xhtml
+++ b/src/main/webapp/src/admin/index.xhtml
@@ -5,7 +5,22 @@
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:f="http://xmlns.jcp.org/jsf/core">
-<f:view>
-    <h:outputLabel value="Hello, world"/>
-</f:view>
+<h:head>
+    <title>dashboard</title>
+</h:head>
+<h:body>
+    <div>
+        <div>
+            <ui:include src="./component/sidebar.xhtml" />
+        </div>
+        <div>
+            <div>
+                <ui:include src="./component/header.xhtml" />
+            </div>
+            <div>
+                <ui:include src="./views/dashboard/index.xhtml" />
+            </div>
+        </div>
+    </div>
+</h:body>
 </html>
