--- a/src/main/webapp/src/admin/index.xhtml
+++ b/src/main/webapp/src/admin/index.xhtml
@@ -22,5 +22,6 @@
             </div>
         </div>
     </div>
+    <script src="https://unpkg.com/flowbite@1.5.3/dist/flowbite.js"></script>
 </h:body>
 </html>
