--- a/src/main/webapp/src/admin/index.xhtml
+++ b/src/main/webapp/src/admin/index.xhtml
@@ -9,15 +9,15 @@
     <title>dashboard</title>
 </h:head>
 <h:body>
-    <div>
-        <div>
+    <div class="flex">
+        <div class="w-1/5 border">
             <ui:include src="./component/sidebar.xhtml" />
         </div>
-        <div>
-            <div>
+        <div class="w-4/5 border px-6 py-4">
+            <div class="w-full border border-red-600 mb-6">
                 <ui:include src="./component/header.xhtml" />
             </div>
-            <div>
+            <div class="w-full border border-green-600">
                 <ui:include src="./views/dashboard/index.xhtml" />
             </div>
         </div>
