--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -4,11 +4,20 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-      xmlns:f="http://xmlns.jcp.org/jsf/core">
+      xmlns:f="http://xmlns.jcp.org/jsf/core"
+      xmlns:p="http://primefaces.org/ui">
 <h:head>
     <title>my pack</title>
+<!--    <h:outputScript library="primefaces" name="js/axios.js" target="head" />-->
 </h:head>
-<h:body>
-    <ui:include src="/src/admin/index.xhtml" />
-</h:body>
+<body>
+    <f:view>
+        <h:outputLabel id="output" value="Hello, world !"/>
+        <button>click here</button>
+
+    </f:view>
+    <script type="">
+
+    </script>
+</body>
 </html>
