feat : dashboard view

--- a/src/main/webapp/src/admin/index.xhtml
+++ b/src/main/webapp/src/admin/index.xhtml
@@ -10,14 +10,14 @@
 </h:head>
 <h:body>
     <div class="flex">
-        <div class="w-1/5 border">
+        <div class="w-56 h-screen">
             <ui:include src="./component/sidebar.xhtml" />
         </div>
-        <div class="w-4/5 border px-6 py-4">
-            <div class="w-full border border-red-600 mb-6">
+        <div class="w-full bg-[#F5F5F9] px-10 py-4 h-screen">
+            <div class="w-full mb-6">
                 <ui:include src="./component/header.xhtml" />
             </div>
-            <div class="w-full border border-green-600">
+            <div class="w-full">
                 <ui:include src="./views/dashboard/index.xhtml" />
             </div>
         </div>
