feat : home page

--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -8,16 +8,8 @@
       xmlns:p="http://primefaces.org/ui">
 <h:head>
     <title>my pack</title>
-<!--    <h:outputScript library="primefaces" name="js/axios.js" target="head" />-->
 </h:head>
 <body>
-    <f:view>
-        <h:outputLabel id="output" value="Hello, world !"/>
-        <button>click here</button>
-
-    </f:view>
-    <script type="">
-
-    </script>
+<ui:include src="./src/admin/index.xhtml" />
 </body>
 </html>
